src/test/resources/test_data/error/undeclaredBind.smtx
main module undeclaredBind {
    @bind(x, 4);
}